DatatypeConverter is gone since Java 9