@@ -3,10 +3,10 @@ package net.explorviz.server.security;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
 import java.security.spec.InvalidKeySpecException;
+import java.util.Base64;
 
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
-import javax.xml.bind.DatatypeConverter;
 
 public class PasswordStorage {
 
@@ -154,11 +154,11 @@ public class PasswordStorage {
 	}
 
 	private static byte[] fromBase64(final String hex) throws IllegalArgumentException {
-		return DatatypeConverter.parseBase64Binary(hex);
+		return Base64.getDecoder().decode(hex);
 	}
 
 	private static String toBase64(final byte[] array) {
-		return DatatypeConverter.printBase64Binary(array);
+		return Base64.getEncoder().encodeToString(array);
 	}
 
 }
